# windows-activator

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  activate.c  activate.h  common.c  common.h  hwid.c  hwid.h  main.c
cmake/toolchains/: x86_64-w64-mingw32.cmake
helpers/: modify.py  xxd.py
scripts/: __init__.py  binary_to_c.py  bundle_html.py  deps.ps1  deps.sh  install_make.bat  install_winget.ps1  pack.ps1  pack.sh  patch_ohook.ps1
site/: index.html
site/assets/css/: styles.css
site/assets/images/svg/: license.txt
site/assets/js/: app.js  audio.js  wallpaper.js
src/: CMakeLists.txt  activator.exe.manifest  common.c  common.h  hwid.c  hwid.h  main.c  ohook.c  ohook.h  resource.rc  vmware.c  vmware.h  vs.c  vs.h
src/helpers/: deps.ps1  deps.sh  make.bat  modify.py  pack.ps1  pack.sh  patch.ps1  winget.ps1  xxd.py
